kubernetes/janblaha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: janblaha
  labels:
    app: janblaha
spec:
  selector:
    app: janblaha
  ports:
    - name: http
      port: 1000
