kubernetes/janblaha-staging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: janblaha-staging
  labels:
    app: janbljanblaha-stagingaha
spec:
  selector:
    app: janblaha-staging
  ports:
    - name: http
      port: 1000
